charts/sabnzbd/template/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: sabnzbd
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: sabnzbd
    spec:
      containers:
      - name: sabnzbd
        image: sabnzbd/sabnzbd
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: sabnzbd
          mountPath: /datadir
        - name: sabnzbd-downloads
          mountPath: /download
        resources:
          limits:
            memory: 50Mi
            cpu: 100m
          requests:
            memory: 50Mi
            cpu: 10m
      volumes:
      - name: sabnzbd
        persistentVolumeClaim:
          claimName: sabnzbd
      - name: sabnzbd-downloads
        hostPath:
          path: /mnt/fileserv/Library
