charts/sabnzbd/template/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sabnzbd
  annotations:
    kubernetes.io/tls-acme: "true"
spec:
  tls:
  - hosts:
    - sabnzbd.frost.haus
    secretName: sabnzbd-cert
  rules:
  - host: sabnzbd.frost.haus
    http:
      paths:
      - path: /
        backend:
          serviceName: sabnzbd
          servicePort: 80
