charts/sabnzbd/template/sabnzbd.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: sabnzbd
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: sabnzbd
    spec:
    #   nodeSelector:
    #     fileserv: "true"
      containers:
      - name: sabnzbd
        image: sabnzbd/sabnzbd
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: sabnzbd
          mountPath: /datadir
        - name: sabnzbd-downloads
          mountPath: /download
      volumes:
      - name: sabnzbd
        persistentVolumeClaim:
          claimName: sabnzbd
      - name: sabnzbd-downloads
        hostPath:
          path: /mnt/fileserv/Library
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sabnzbd
  annotations:
    kubernetes.io/tls-acme: "true"
spec:
  tls:
  - hosts:
    - sabnzbd.frost.haus
    secretName: sabnzbd-cert
  rules:
  - host: sabnzbd.frost.haus
    http:
      paths:
      - path: /
        backend:
          serviceName: sabnzbd
          servicePort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: sabnzbd
  labels:
    app: sabnzbd
    kubernetes.io/name: "sabnzbd"
spec:
  selector:
    app: sabnzbd
  ports:
  - name: sabnzbd
    port: 80
    targetPort: 8080
